@@ -17,7 +17,9 @@ Version 4.1.0 - DEV
  - In runguard, kill all remaing processes in the cgroup at the end
    of the run; preventing leftover processes in corner cases like
    detaching from itself.
- - Add support for multiple simultaneous contests
+ - Add support for multiple simultaneous contests.
+ - Allow to add restrictions on contests, problems and languages to
+   judgehosts.
 
 Version 4.0.0 - 22 July 2014
 ----------------------------
